# pte-stats

./: .gitignore  .pre-commit-config.yaml  .pypirc  LICENSE  README.md  env.yml  env_deploy.yml  env_dev.yml  pylintrc  pyproject.toml  setup.cfg  tox.ini
.archive/: tests.yml
.github/actions/setup-venv/: action.yml
.github/workflows/: lint_and_format.yml  main.yml  tests.yml
doc/: CHANGELOG.md
docs/: CHANGELOG.md
pte_stats/: __init__.py  cluster.py
requirements/: requirements.in  requirements.txt  requirements_backup.txt  requirements_deploy.in  requirements_deploy.txt  requirements_deploy_backup.txt  requirements_dev.in  requirements_dev.txt  requirements_dev_backup.txt
src/pte_stats/: __init__.py  cluster.py  permutation.py  timeseries.py
tests/: test_cluster.py  test_import_pte_stats.py  test_permutation.py  test_timeseries.py
