[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.5,<4"]

[project]
authors = [
  {name = "Richard M. Köhler"},
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "An open-source software package for statistics with time series."
dynamic = ["version"]
keywords = ["statistics", "timeseries", "eeg", "ieeg"]
license = {file = "LICENSE"}
maintainers = [
  {name = "Richard M. Köhler"},
]
name = "pte-stats"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"

dependencies = [
  "joblib",
  "numba",
  "numpy",
  "scikit-image",
  "statsmodels",
]

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "mypy",
  "pandas-stubs",
  "pip-tools",
  "pre-commit",
  "pylint",
  "pytest",
  "pytest-cov",
  "ruff",
  "tox",
]

[tool.flit.module]
name = "pte_stats"

[project.urls]
bugtracker = "https://github.com/richardkoehler/pte-stats/issues"
changelog = "https://github.com/richardkoehler/pte-stats/blob/main/doc/CHANGELOG.md"
repository = "https://github.com/richardkoehler/pte-stats"

[tool.black]
exclude = '''
/(
  __pycache__
)/
'''
line-length = 79

[tool.ruff]
line-length = 79

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "joblib",
  "numba",
  "numpy",
  "scipy",
  "scipy.stats",
  "skimage",
  "statsmodels.stats.multitest",
]
